--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,25 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="issue_count_background_color">#800F243A</color>
+    <color name="issue_location_text_color">@color/white</color>
+    <color name="like_dislike_background_color">@color/white</color>
+    <color name="like_dislike_text_color">#2D4379</color>
+    <color name="tv_user_name_text_color">#2D4379</color>
+    <color name="txt_time_text_color">#7B8BB2</color>
+    <color name="comment_actions_color">#8F90A6</color>
+    <color name="shimmer_color">#C1C1C1</color>
+    <color name="comment_box_background_color">@color/white</color>
+    <color name="fragment_background_color">@color/white</color>
+
+    <color name="background_color">@color/purple_500</color>
+    <color name="background_color_">@color/purple_200</color>
+
+    <color name="text_color_gray">#5D5D5D</color>
+    <color name="twitter">#03A9F4</color>
+    <color name="facebook">#3B5998</color>
+    <color name="background_search">#F2F2F2</color>
+    <color name="text_black">#333333</color>
+    <color name="color_unchecked">#9C9C9C</color>
 </resources>
