fix bug in back click

--- a/app/src/main/res/navigation/current_weather.xml
+++ b/app/src/main/res/navigation/current_weather.xml
@@ -62,7 +62,7 @@
             app:launchSingleTop="true"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
-            app:popUpTo="@id/splashFragment"
+            app:popUpTo="@id/settingFragment"
             app:popUpToInclusive="true" />
     </fragment>
 </navigation>
